What will happen if the learning rate is too small?

--- a/Predictive_Analytics_Polynomial_Regression_Assignment_2.ipynb
+++ b/Predictive_Analytics_Polynomial_Regression_Assignment_2.ipynb
@@ -821,7 +821,7 @@
         "* What will happen if the learning rate is too large?\n",
         "> * Model might overshoot the optimal point in the loss(not reach minima)\n",
         "* What will happen if the learning rate is too small?\n",
-        "> * Your answer\n",
+        "> * we will need too many iterations to converge to the best values(take more time)\n",
         "* If you what to change the second order (quadratic) model to third order model what all things will change in the above code?\n",
         "> * Your answer\n",
         "> * Your answer\n",
