--- a/Predictive_Analytics_Polynomial_Regression_Assignment_2.ipynb
+++ b/Predictive_Analytics_Polynomial_Regression_Assignment_2.ipynb
@@ -228,7 +228,7 @@
         "\n",
         "\n",
         "**Construct a Cost function:**\n",
-        "$$MSE(w_1,w_2,b)= your\\;answer$$"
+        "$$MSE(w_1,w_2,b)= \\frac{1}{n} \\sum_{i=1}^n \\left(y_i - (w_1 x_{1i}^2 + w_2 x_{1i} + b)\\right)^2$$"
       ]
     },
     {
