third order model

--- a/Predictive_Analytics_Polynomial_Regression_Assignment_2.ipynb
+++ b/Predictive_Analytics_Polynomial_Regression_Assignment_2.ipynb
@@ -222,8 +222,8 @@
       "source": [
         "## Polynomial Regression\n",
         "\n",
-        "**Construct a second order Model:** $$\\;\\;\\;\\;\n",
-        "\\hat y = w_1 x_1^2 + w_2x_1 + b\n",
+        "**Construct a second order Model:** \n",
+        "$$ y = w_1 x_1^2 + w_2x_1 + b$$\n",
         "\n",
         "\n",
         "\n",
@@ -360,15 +360,27 @@
       },
       "source": [
         "**Derivatives of cost function:**\n",
-        "$$\\frac{\\partial MSE}{\\partial w_1} = \\frac{-2}{n} \\sum_{i=1}^{n} x_{1i}^2 (y_i - (w_1 x_{1i}^2 + w_2x_{1i} + b))$$\n",
+        " $$\n",
+        "  \\frac{\\partial MSE}{\\partial w_1} = -\\frac{2}{n} \\sum_{i=1}^n \\left(y_i - (w_1 x_{1i}^2 + w_2 x_{1i} + b)\\right) x_{1i}^2\n",
+        "  $$\n",
+        "   $$\n",
+        "  \\frac{\\partial MSE}{\\partial w_2} = -\\frac{2}{n} \\sum_{i=1}^n \\left(y_i - (w_1 x_{1i}^2 + w_2 x_{1i} + b)\\right) x_{1i}\n",
+        "  $$\n",
+        "  $$\n",
+        "  \\frac{\\partial MSE}{\\partial b} = -\\frac{2}{n} \\sum_{i=1}^n \\left(y_i - (w_1 x_{1i}^2 + w_2 x_{1i} + b)\\right)\n",
+        "  $$\n",
         "\n",
         "**Gradient Descent Algorithm:**\n",
         "```\n",
         "Repeat until converges:\n",
         "```\n",
-        "$$\n",
-        "    theta = theta - alpha * gradient\n",
-        "$$"
+        "$$ Δw_1 = -\\frac{2}{n} \\sum_{i=1}^n \\left( y_i - (w_1 x_{1i}^2 + w_2 x_{1i} + b) \\right) x_{1i}^2 \\$$ \n",
+        "       \n",
+        " $$ Δw_2 = -\\frac{2}{n} \\sum_{i=1}^n \\left( y_i - (w_1 x_{1i}^2 + w_2 x_{1i} + b) \\right) x_{1i}\n",
+        "       $$\n",
+        "\n",
+        "$$ Δb = -\\frac{2}{n} \\sum_{i=1}^n \\left( y_i - (w_1 x_{1i}^2 + w_2 x_{1i} + b) \\right)\n",
+        "       $$"
       ]
     },
     {
@@ -823,11 +835,13 @@
         "* What will happen if the learning rate is too small?\n",
         "> * we will need too many iterations to converge to the best values(take more time)\n",
         "* If you what to change the second order (quadratic) model to third order model what all things will change in the above code?\n",
-        "> * Your answer\n",
-        "> * Your answer\n",
-        "> * Your answer\n",
-        "> * Your answer\n",
-        "> * Your answer"
+        "> $$ y = w_1 x^2 + w_2 x + b $$\n",
+        "to:\n",
+        ">$$ y = w_3 x^3 + w_1 x^2 + w_2 x + b $$\n",
+        "\n",
+        "> $$ \\frac{\\partial MSE}{\\partial w_3} = -\\frac{2}{n} \\sum_{i=1}^{n} \\left(y_i - (w_3 x_i^3 + w_1 x_i^2 + w_2 x_i + b)\\right) x_i^3 $$\n",
+        "\n",
+        "> $$w_3= w_3 - \\alpha \\frac{\\partial MSE}{\\partial w_3} $$"
       ]
     }
   ],
