--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -5,36 +5,123 @@
    "execution_count": 1,
    "id": "55feccfd",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "25fe7da8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename='invoices'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e2dfeed6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basepath='/Users/aslahmp/Documents/projects/typing center projects/tanseeq/bc/Exported Tables/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6de8fd61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review = pd.read_csv(f'{basepath}{filename}.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c2a2ba35",
+   "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (1013372061.py, line 19)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 19\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(\"Your love percentage is \" + first_digit +second digit)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id               0\n",
+      "companyName      0\n",
+      "address          0\n",
+      "remark         297\n",
+      "notes          273\n",
+      "invoiceDate      0\n",
+      "dueDate          0\n",
+      "subTotal         0\n",
+      "balanceDue       0\n",
+      "advance          0\n",
+      "createdBy        0\n",
+      "createdAt        0\n",
+      "updatedAt        0\n",
+      "deletedAt      489\n",
+      "dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(\"The love calculator is calculating your score...\")\n",
-    "name1= input()\n",
-    "name2= input()\n",
-    "combined_names= name1+name2\n",
-    "lower_names=combined_names.lower()\n",
-    "\n",
-    "t=lower_names.count(\"t\")\n",
-    "r=lower_names.count(\"r\")\n",
-    "u=lower_names.count(\"u\")\n",
-    "e=lower_names.count(\"e\")\n",
-    "first_digit = str(t +r+u+e)\n",
-    "\n",
-    "l=lower_names.count(\"l\")\n",
-    "o=lower_names.count(\"o\")\n",
-    "v=lower_names.count(\"v\")\n",
-    "e=lower_names.count(\"e\")\n",
-    "second_digit= str(l+o+v+e)\n",
-    "\n",
-    "print(\"Your love percentage is \" + first_digit +second digit)"
+    "print(review.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2c36bd8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review['remark'] = review['remark'].fillna(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4d2c2430",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id               0\n",
+      "companyName      0\n",
+      "address          0\n",
+      "remark           0\n",
+      "notes            0\n",
+      "invoiceDate      0\n",
+      "dueDate          0\n",
+      "subTotal         0\n",
+      "balanceDue       0\n",
+      "advance          0\n",
+      "createdBy        0\n",
+      "createdAt        0\n",
+      "updatedAt        0\n",
+      "deletedAt      489\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(review.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1e9d9ec4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "review.to_csv(f'{basepath}{filename}1.csv', index=False)"
    ]
   }
  ],
